--- a/package.json
+++ b/package.json
@@ -20,15 +20,24 @@
     "@angular/platform-browser": "~8.1.2",
     "@angular/platform-browser-dynamic": "~8.1.2",
     "@angular/router": "~8.1.2",
+    "@ionic-native/bluetooth-serial": "^5.31.1",
     "@ionic-native/core": "^5.0.0",
+    "@ionic-native/file": "^5.31.1",
+    "@ionic-native/keyboard": "^5.31.1",
+    "@ionic-native/printer": "^5.31.1",
     "@ionic-native/splash-screen": "^5.0.0",
     "@ionic-native/status-bar": "^5.0.0",
     "@ionic/angular": "^4.7.1",
     "@ionic/storage": "^2.2.0",
     "cordova-android": "^8.0.0",
+    "cordova-plugin-bluetooth-serial": "^0.4.7",
+    "cordova-plugin-file": "^6.0.2",
+    "cordova-plugin-ionic-keyboard": "^2.2.0",
+    "cordova-plugin-printer": "^0.8.0",
     "cordova-sqlite-storage": "^3.3.0",
     "core-js": "^2.5.4",
     "rxjs": "~6.5.1",
+    "terser": "3.14.1",
     "tslib": "^1.9.0",
     "zone.js": "~0.9.1"
   },
@@ -47,7 +56,6 @@
     "@types/node": "~8.9.4",
     "codelyzer": "^5.0.0",
     "cordova-plugin-device": "^2.0.2",
-    "cordova-plugin-ionic-keyboard": "^2.1.3",
     "cordova-plugin-ionic-webview": "^4.1.1",
     "cordova-plugin-splashscreen": "^5.0.2",
     "cordova-plugin-statusbar": "^2.4.2",
@@ -74,8 +82,13 @@
       "cordova-plugin-ionic-webview": {
         "ANDROID_SUPPORT_ANNOTATIONS_VERSION": "27.+"
       },
+      "cordova-sqlite-storage": {},
+      "cordova-plugin-printer": {
+        "ANDROID_SUPPORT_V4_VERSION": "28.+"
+      },
+      "cordova-plugin-file": {},
       "cordova-plugin-ionic-keyboard": {},
-      "cordova-sqlite-storage": {}
+      "cordova-plugin-bluetooth-serial": {}
     },
     "platforms": [
       "android"
